Revision history for MIDI-Util

{{$NEXT}}

0.1301 2024-05-14 15:02:21
    - Improve documentation.

0.1300 2024-05-14 14:02:57
    - Add the get_milliseconds() and score2events() functions.
    - Fix documentation.

0.1201 2023-05-17 11:41:22
    - Make the soundfont optional for play_timidity().
    - Improve documentation.

0.1200 2023-05-17 11:18:08
    - Add timidity support.
    - Use subtests.
    - Improve documentation.

0.1101 2022-05-29 13:41:16
    - Improve documentation.

0.1100 2022-05-29 13:14:56
    - Add the eg/dump program.
    - Add the reverse_dump() function.
    - Made dump() return actual hashrefs, not arrays of strings.

0.1002 2022-04-23 12:07:38
    - Rename set_time_sig to set_time_signature.

0.1001 2022-04-21 08:25:47
    - Improve SYNOPSIS.

0.1000 2022-04-21 08:14:01
    - Add the ticks() function.

0.0902 2021-04-14 15:07:26
    - Add ppqn handling to dura_size().

0.0901 2021-04-14 14:49:14
    - Fix documentation!

0.0900 2021-04-14 14:46:10
    - Add the dura_size() function.

0.0800 2021-01-10 19:02:29
    - Alright. Use Exporter.
    - Rename the dump() fuction to midi_dump().

0.0705 2020-12-26 02:27:47
    - Handle double-flats and double-sharps in midi_format().

0.0704 2020-12-18 09:47:22
    - Add the TICKS dump functionality.

0.0703 2020-12-15 06:56:12
    - Add checks in midi_format() for "bogus" enharmonic equivalents.

0.0702 2020-12-10 05:05:07
    - Improve SYNOPSIS.

0.0701 2020-12-08 13:48:23
    - Improve documentation.
    - Remove the add_octave() function now that it's part of Music::Chord::Note.

0.0700 2020-11-30 08:08:24
    - Add the add_octave() function.
    - Improve documentation.

0.0602 2020-11-26 11:33:55
    - Don't import anything from MIDI::Simple.

0.0601 2020-08-26 11:02:47
    - Add missing signature documentation.

0.0600 2020-08-26 09:43:00
    - Add and test the set_time_sig() function.
    - Improve documentation.

0.0500 2020-08-13 15:34:46
    - Remove the unused new_track() function.
