@@ -25,7 +25,7 @@ our @EXPORT = qw(
     ticks
     timidity_conf
     play_timidity
-    get_milliseconds
+    get_microseconds
     score2events
 );
 
@@ -44,7 +44,7 @@ use constant TICKS => 96;
     ticks
     timidity_conf
     play_timidity
-    get_milliseconds
+    get_microseconds
     score2events
   );
 
@@ -74,7 +74,7 @@ use constant TICKS => 96;
   # Or you can just play the score:
   play_timidity($score, 'some.mid');
 
-  my $ms = get_milliseconds($score);
+  my $ms = get_microseconds($score);
 
   my $events = score2events($score);
 
@@ -463,16 +463,16 @@ sub play_timidity {
     system(@cmd) == 0 or die "system(@cmd) failed: $?";
 }
 
-=head2 get_milliseconds
+=head2 get_microseconds
 
-  get_milliseconds($score_obj);
+  get_microseconds($score_obj);
 
-Calculate the milliseconds of a tick given a B<score>, with tempo and
+Calculate the microseconds of a tick given a B<score>, with tempo and
 ticks.
 
 =cut
 
-sub get_milliseconds {
+sub get_microseconds {
     my ($score) = @_;
     my $tempo = first { $_->[0] eq 'set_tempo' } @{ $score->{Score} };
     return $tempo->[2] / ${ $score->{Tempo} };
