@@ -13,7 +13,7 @@ use_ok 'MIDI::Util', qw(
     dura_size
     ticks
     timidity_conf
-    get_milliseconds
+    get_microseconds
     score2events
 );
 
@@ -111,9 +111,9 @@ subtest timidity_conf => sub {
     ok !-e $filename, 'file unlinked';
 };
 
-subtest get_milliseconds => sub {
-    my $got = get_milliseconds($score);
-    is $got, 6250, 'get_milliseconds';
+subtest get_microseconds => sub {
+    my $got = get_microseconds($score);
+    is $got, 6250, 'get_microseconds';
 };
 
 subtest score2events => sub {
